feat: phase3 진행완료